neutron (2:8.1.0-0ubuntu1) xenial; urgency=medium

  * New upstream point release for OpenStack Mitaka (LP: #1580674).

 -- David Della Vecchia <ddv@canonical.com>  Wed, 11 May 2016 12:05:38 -0400

neutron (2:8.0.0-0ubuntu1) xenial; urgency=medium

  * New upstream release for OpenStack Mitaka.
  * d/p/drop-ryu-dep.patch: Rebased.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 07 Apr 2016 14:17:32 -0400

neutron (2:8.0.0~rc1-0ubuntu1) xenial; urgency=medium

  * New upstream release candidate for OpenStack Mitaka.
  * d/p/autogenerate-macvtap-agent-config-file.patch: Dropped. Fixed upstream.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 24 Mar 2016 08:31:46 -0400

neutron (2:8.0.0~b3-0ubuntu1) xenial; urgency=medium

  * New upstream milestone for OpenStack Mitaka.
  * d/control: Align (Build-)Depends with upstream.
  * d/p/ensure-tunnels-fully-reset.patch: Dropped. Fixed upstream.
  * d/p/*: Rebased.
  * d/p/skip-ryu-tests.patch: Skip ryu tests.
  * d/control, d/neutron-bgp-dragent.*: Add new binary package and install/init
    files for BGP Dynamic Routing agent.
  * d/control, d/neutron-macvtap-agent.*: Add new binary package and install/init
    files for Macvtap L2 Agent.
  * d/p/autogenerate-macvtap-agent-config-file.patch: Cherry-picked from upstream
    master to generate config file for Macvtap L2 Agent.

 -- Corey Bryant <corey.bryant@canonical.com>  Mon, 07 Mar 2016 15:11:31 -0500

neutron (2:8.0.0~b2-0ubuntu7) xenial; urgency=medium

  * d/rules: Ensure that neutron-linuxbridge-cleanup init configurations
    are installed in the correct package (LP: #1550004).

 -- James Page <james.page@ubuntu.com>  Fri, 26 Feb 2016 13:29:25 +0000

neutron (2:8.0.0~b2-0ubuntu6) xenial; urgency=medium

  * d/neutron-server.init.in: Restore missing source of
    /e/d/neutron-server prior to trying to configure daemon arguments
    (LP: #1549919).

 -- James Page <james.page@ubuntu.com>  Thu, 25 Feb 2016 18:12:27 +0000
